feat: added dependencies and optimized build.gradle